compiler/tools/fpp-check/test/state_machine/redef/junction.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/redef/junction.fpp:5.3
  junction j { if g enter S else enter S }
  ^
error: redefinition of symbol j
previous definition is here:
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/redef/junction.fpp:4.3
  junction j { if g enter S else enter S }
  ^
